# minipi

./: .gitattributes  .gitignore  README.md  usr2ctrl.txt  yoloinfo.txt
cam_preset/: camera_preset_1016.json  camera_preset_blue.json  camera_preset_d435Test.json  camera_preset_d435Test2.json  camera_preset_d435Test3.json  camera_preset_d435Test4.json  camera_preset_fisheye.json  camera_preset_gray.json  camera_preset_save.json  fisheye_1029.json  roboworld_1030_0.json  roboworld_1030_usbcam.json  roboworld_1104_0.json  roboworld_1104_d435.json
etc/: joy_footstep.yaml  pi37_dpkg_l_list.txt  twist_mux.md
etc/docs/manual/: llm_gui.md
jupyter/: 01.cmd_pub.ipynb  02.cmd_sub.ipynb  03.cmd_auto_sub.ipynb  04.yolo_ball_image.ipynb  05.opencv_1121.ipynb  05.opencv_1125_01.ipynb  05.opencv_1125_final.ipynb  05.opencv_1125_test.ipynb  06.color_tracer.ipynb  06.color_tracer_final.ipynb  07.object_tracer.ipynb
src/: bag_info.py  niceGUI_ROS1.py  niceGUI_ROSBRIDGE.py  niceGUI_ROS_final.py  niceGUI_ROS_funcCom.py  roboworld_soccer.py
src/ball_tracker_pkg/: CMakeLists.txt  package.xml
src/ball_tracker_pkg/launch/: cam_setting.launch  continuous_track.launch  discrete_track.launch  discrete_track_efficient.launch  mux_ball_goal_efficient.launch  mux_continuous_track.launch  mux_discrete_track_efficient.launch  mux_discrete_track_efficient_ball.launch  mux_discrete_track_efficient_person.launch
src/ball_tracker_pkg/scripts/: ball_tracking.py  ball_tracking_basic.py  ball_tracking_basic3.py  cam_setting.py  load_camera_preset.py  mux_ball_goal_tracking_2222.py  mux_ball_goal_tracking_efficient_2_best.py  mux_ball_goal_tracking_efficient_4_better.py  mux_ball_goal_tracking_efficient_5_normal.py  mux_ball_tracking.py  mux_ball_tracking_1105.py  mux_ball_tracking_1105_2.py  mux_ball_tracking_1105_3.py  mux_ball_tracking_efficient.py  mux_ball_tracking_efficient_origin.py  visualize_ballDetect.py  visualize_ball_tracking.py  visualize_person_tracking(1119).py
src/d435_pkg/: CMakeLists.txt  package.xml
src/d435_pkg/launch/: avoid_wall.launch
src/d435_pkg/scripts/: depthImg.py  mux_avoidWall.py  pointCloud.py
src/dataset_making/: CMakeLists.txt  package.xml
src/dataset_making/launch/: get_image.launch
src/ros1_commander/: CMakeLists.txt  package.xml
src/ros1_commander/scripts/: launcher_service.py
src/ros1_commander/srv/: LaunchCommand.srv
src/sim2real_msg/: package.xml
src/sim2real_msg/msg/: ctrl2usr.msg  usr2ctrl.msg
src/soccer_demo/: CMakeLists.txt  package.xml
src/soccer_demo/launch/: ball_tracking_demo.launch
src/using_llm/: CMakeLists.txt  package.xml
src/using_llm/launch/: yolo_llm_pi.launch
src/using_llm/rknn/: ramen_metadata.yaml
src/using_llm/scripts/: llm_gui.py  rkllama_conv.py  yolo_visualizer.py
src/web_gui_pkg/: CMakeLists.txt  package.xml  web_gui_new_page.md
src/web_gui_pkg/scripts/: run_remote_gui.py  run_webgui.py  run_webgui_ori.py
src/web_gui_pkg/src/web_gui_pkg/: config.py  core_logic.py  main_app.py  page_cam_setting.py  page_control _backup.py  page_launch.py  page_remote.py  page_remote_backup.py
src/wego_twist_mux/: CMakeLists.txt  package.xml
src/wego_twist_mux/launch/: twist_mux.launch
src/wego_twist_mux/scripts/: set_joy.py
src/yolo11_detect_pkg/: CMakeLists.txt  camera_preset_d435Test5.json  camera_preset_d435Test6.json  camera_preset_d435Test7.json  camera_preset_d435Test8.json  package.xml
src/yolo11_detect_pkg/config/rknn/: 1020_metadata.yaml  1022_metadata.yaml  goalSign_metadata.yaml  pi_soccer_metadata.yaml  ramen_metadata.yaml  redGoal_metadata.yaml  roboworld3_metadata.yaml  roboworld_metadata.yaml  (+4 more)
src/yolo11_detect_pkg/launch/: yolo_detect_efficient.launch  yolo_detect_efficient_d435.launch
src/yolo11_detect_pkg/msg/: Yolo.msg  YoloDetect.msg
src/yolo11_detect_pkg/scripts/: test_img.py  yolo_send_topic_cam.py  yolo_send_topic_cam_efficient.py  yolo_send_topic_cam_efficient_d435.py  yolo_send_topic_test.py
startup/: README.md  joy_Switch_alg.desktop  joy_footstep.yaml  joy_kid.yaml  joy_teleop.launch  joy_teleop_kid.launch  master_autostart.sh  robot_wego.desktop  run_standup_only.sh  setting.sh
startup/startup/custom/: start_up_kid.sh
startup/startup/default/: master_autostart.sh  run_standup_only.sh  soccer_web_gui.sh  total_startup.sh  wifi_check.sh
wego_minipi_ws/: README.md  ble_wifi_setup.py  requirements.txt
wego_minipi_ws/etc/: joy_control.py  making.md  pi37_pip_list.txt
wego_minipi_ws/src/ball_tracker_pkg/: CMakeLists.txt
wego_minipi_ws/src/node_manager/: CMakeLists.txt  package.xml  setup.py
wego_minipi_ws/src/sim2real_msg/: CMakeLists.txt
wego_minipi_ws/src/sim2real_msg/msg/: .MtrState.msg.swp  ControlState.msg
wego_minipi_ws/src/web_gui_pkg/: CMakeLists.txt  setup.py
(+43 files in other folders)
