<?xml version="1.0"?>
<package format="2">
  <name>ball_tracker_pkg</name>
  <version>0.0.0</version>
  <description>The ball_tracker_pkg package</description>
  <maintainer email="hightorque@todo.todo">hightorque</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sim2real_msg</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>yolo11_detect_pkg</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sim2real_msg</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>yolo11_detect_pkg</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
