<?xml version="1.0"?>
<package format="2">
  <name>web_gui_pkg</name>
  <version>0.0.0</version>
  <description>The web_gui_pkg package</description>
  <maintainer email="hightorque@todo.todo">hightorque</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>python3-nicegui</exec_depend>
  <exec_depend>python3-roslibpy</exec_depend>
  <exec_depend>python3-opencv-python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
