<?xml version="1.0"?>
<package format="2">
  <name>wego_twist_mux</name>
  <version>0.0.0</version>
  <description>wego_twist_mux package</description>

  <maintainer email="hightorque@todo.todo">hightorque</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>twist_mux</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
